Fix overflow for small device view

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 * {
     box-sizing: border-box;
-    /* border: 1px solid black; */
     font-family: monospace, sans-serif;
 }
 
@@ -8,7 +7,6 @@ body {
     background-color: rgba(225, 160, 106, 0.735);
     margin: 0;
     position: relative;
-    min-width: 404px;
 }
 
 #background-container {
@@ -33,6 +31,7 @@ body {
     align-items: center;
     flex-direction: column;
     position: absolute;
+    overflow: hidden;
 }
 
 #display {
